Fixed some styles that were causing a scrollbar

--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -23,10 +23,9 @@ body > #wrap {height: auto; min-height: 100%;}
 /* Bar styles */
 
 #footer { 
-	padding-top: 5px;
     position: relative;
 	margin-top: -70px; /* negative value of footer height */
-	height: 70px;
+	height: 60px;
 	clear:both;
 }
 
